# rust-toys

./: .gitignore  Makefile  README.md  anadict.txt  anagrams-djbhash-tasks.rs  anagrams-djbhashmap.rs  anagrams-hashmap-mmap.rs  anagrams-hashmap-wide.rs  anagrams-hashmap.rs  anagrams-vectors-parallel.rs  anagrams-vectors-tasks.rs  anagrams-vectors-wide.rs  anagrams-vectors.rs  anagrams4.rs  anagrams5.rs  bisect.rs  combinations.rs  complex.rs  djbhash.rs  hashing-performance.rs  misc.rs  mk_anadict.py  mk_anadict.rs  mk_anadict_traits.rs  mmap.rs  permtest.rs  presser_three.py
alternatives/: anagrams-hash.c  anagrams-hashmap-ocaml.ml  anagrams-vectors.c  mk_anadict.nim  nimrod_anagrams.nim  presser_one.py  presser_two.py
pony/anagrams/: array_hash_map.pony  combination.pony  hashseq.pony  lib.pony  lib2.pony  main.pony  robinhood.pony
pony/mk_anadict/: main.pony
rust/: Cargo.toml
rust/components/bisect/: Cargo.toml
rust/components/bisect/src/: bisect.rs  lib.rs
rust/components/combinations/: Cargo.toml
rust/components/combinations/src/: lib.rs
rust/components/djbhashmap/: Cargo.toml
rust/components/djbhashmap/src/: djbhasher.rs  entry.rs  lib.rs
rust/components/mmap/: Cargo.toml
rust/components/mmap/src/: lib.rs
