[package]
name    = "rust-toys"
version = "1.0.0-beta"
authors = ["Tommy M. McGuire <mcguire@crsr.net>"]

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true   # ?
debug-assertions = false

[[bin]]
name="mk_anadict"

[[bin]]
name="mk_anadict_traits"

[[bin]]
name="anagrams-hashmap"

[[bin]]
name="anagrams-djbhashmap"

[[bin]]
name="anagrams-vectors"

[[bin]]
name="hashing-performance"

[dependencies.combinations]
path = "components/combinations"

[dependencies.djbhashmap]
path = "components/djbhashmap"

[dependencies.bisect]
path = "components/bisect"

[dependencies]
time = "0.1.24"
