[package]
name    = "rust-toys"
version = "1.0.0-beta"
authors = ["Tommy M. McGuire <mcguire@crsr.net>"]

[profile.release]
opt-level        = 3
debug            = false
rpath            = false
lto              = true   # ?
debug-assertions = false

[dependencies.combinations]
path = "components/combinations"

[dependencies.djbhashmap]
path = "components/djbhashmap"

[dependencies.bisect]
path = "components/bisect"

[dependencies.mmap]
path = "components/mmap"

[dependencies]
time = "0.1"
